--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>startup</title>
 </head>
 
 <body>
@@ -34,31 +34,44 @@
                             <th>boards</th>
                         </tr>
                         <tr>
-                            <td><a href="https://www.youtube.com">youtube</a></td>
-                            <td><a href="https://www.instagram.com">insta</a></td>
-                            <td><a href="https://www.github.com">github</a></td>
-                            <td><a href="https://boards.4channel.org/g/catalog">/g/</a></td>
+                            <td><a href="https://www.youtube.com" target="_blank" rel="noopener norefferer">youtube</a>
+                            </td>
+                            <td><a href="https://www.instagram.com" target="_blank" rel="noopener norefferer">insta</a>
+                            </td>
+                            <td><a href="https://www.github.com" target="_blank" rel="noopener norefferer">github</a>
+                            </td>
+                            <td><a href="https://boards.4channel.org/g/catalog" target="_blank"
+                                    rel="noopener norefferer">/g/</a></td>
 
 
                         </tr>
                         <tr>
-                            <td><a href="https://www.hulu.com">hulu</a></td>
-                            <td><a href="https://www.twitter.com">twitter</a></td>
-                            <td><a href="https://www.pastebin.com">pastebin</a></td>
-                            <td><a href="https://www.lainchan.org/%CE%BB/catalog.html">/λ/</a></td>
+                            <td><a href="https://www.hulu.com" target="_blank" rel="noopener norefferer">hulu</a></td>
+                            <td><a href="https://www.twitter.com" target="_blank" rel="noopener norefferer">twitter</a>
+                            </td>
+                            <td><a href="https://www.pastebin.com" target="_blank"
+                                    rel="noopener norefferer">pastebin</a></td>
+                            <td><a href="https://www.lainchan.org/%CE%BB/catalog.html" target="_blank"
+                                    rel="noopener norefferer">/λ/</a></td>
 
                         </tr>
                         <tr>
-                            <td><a href="https://www.play.hbomax.com">hbo max</a></td>
-                            <td><a href="https://www.dev.to">dev.to</a></td>
-                            <td><a href="https://www.udemy.com">udemy</a></td>
-                            <td><a href="https://boards.420chan.org/prog/">/prog/</a></td>
+                            <td><a href="https://www.play.hbomax.com" target="_blank" rel="noopener norefferer">hbo
+                                    max</a></td>
+                            <td><a href="https://www.dev.to" target="_blank" rel="noopener norefferer">dev.to</a></td>
+                            <td><a href="https://www.udemy.com" target="_blank" rel="noopener norefferer">udemy</a></td>
+                            <td><a href="https://www.lainchan.org/%CE%A9/catalog.html" target="_blank"
+                                    rel="noopener norefferer">/Ω/</a></td>
                         </tr>
                         <tr>
-                            <td><a href="https://www.netflix.com">netflix</a></td>
-                            <td><a href="https://www.linked.in">linkedin</a></td>
-                            <td><a href="https://www.codewars.com">codewars</a></td>
-                            <td><a href="https://boards.4channel.org/tv/catalog">/tv/</a></td>
+                            <td><a href="https://www.netflix.com" target="_blank" rel="noopener norefferer">netflix</a>
+                            </td>
+                            <td><a href="https://www.linked.in" target="_blank" rel="noopener norefferer">linkedin</a>
+                            </td>
+                            <td><a href="https://www.codewars.com" target="_blank"
+                                    rel="noopener norefferer">codewars</a></td>
+                            <td><a href="https://boards.4channel.org/tv/catalog" target="_blank"
+                                    rel="noopener norefferer">/tv/</a></td>
                         </tr>
                     </table>
                 </div>
