--- a/index.html
+++ b/index.html
@@ -31,47 +31,47 @@
                             <th>vidya</th>
                             <th>soc</th>
                             <th>dev</th>
+                            <th>finance</th>
                             <th>boards</th>
                         </tr>
                         <tr>
-                            <td><a href="https://www.youtube.com" target="_blank" rel="noopener norefferer">youtube</a>
-                            </td>
-                            <td><a href="https://www.instagram.com" target="_blank" rel="noopener norefferer">insta</a>
-                            </td>
-                            <td><a href="https://www.github.com" target="_blank" rel="noopener norefferer">github</a>
-                            </td>
-                            <td><a href="https://boards.4channel.org/g/catalog" target="_blank"
-                                    rel="noopener norefferer">/g/</a></td>
+                            <td><a href="https://www.youtube.com" target="_blank" rel="noopener norefferer">youtube</a></td>
+                            <td><a href="https://www.instagram.com" target="_blank" rel="noopener norefferer">insta</a></td>
+                            <td><a href="https://www.github.com" target="_blank" rel="noopener norefferer">github</a></td>
+                            <td><a href="https:\\www.schoolsfirstfcu.org" target="_blank" rel="noopener norefferer">schoolsfirst</a></td>
+                            <td><a href="https://boards.4channel.org/g/catalog" target="_blank" rel="noopener norefferer">/g/</a></td>
 
 
                         </tr>
                         <tr>
                             <td><a href="https://www.hulu.com" target="_blank" rel="noopener norefferer">hulu</a></td>
-                            <td><a href="https://www.twitter.com" target="_blank" rel="noopener norefferer">twitter</a>
-                            </td>
-                            <td><a href="https://www.pastebin.com" target="_blank"
-                                    rel="noopener norefferer">pastebin</a></td>
-                            <td><a href="https://www.lainchan.org/%CE%BB/catalog.html" target="_blank"
-                                    rel="noopener norefferer">/λ/</a></td>
+                            <td><a href="https://www.twitter.com" target="_blank" rel="noopener norefferer">twitter</a></td>
+                            <td><a href="https://www.pastebin.com" target="_blank"rel="noopener norefferer">pastebin</a></td>
+                            <td><a href="https://www.chase.com" target="_blank" rel="noopener norefferer">chase</a></td>
+                            <td><a href="https://www.lainchan.org/%CE%BB/catalog.html" target="_blank" rel="noopener norefferer">/λ/</a></td>
 
                         </tr>
                         <tr>
-                            <td><a href="https://www.play.hbomax.com" target="_blank" rel="noopener norefferer">hbo
-                                    max</a></td>
+                            <td><a href="https://www.play.hbomax.com" target="_blank" rel="noopener norefferer">hbo max</a></td>
                             <td><a href="https://www.dev.to" target="_blank" rel="noopener norefferer">dev.to</a></td>
                             <td><a href="https://www.udemy.com" target="_blank" rel="noopener norefferer">udemy</a></td>
-                            <td><a href="https://www.lainchan.org/%CE%A9/catalog.html" target="_blank"
-                                    rel="noopener norefferer">/Ω/</a></td>
+                            <td><a href="https://investor.vanguard.com/home" target="_blank" rel="noopener norefferer">vangaurd</a></td>
+                            <td><a href="https://www.lainchan.org/%CE%A9/catalog.html" target="_blank" rel="noopener norefferer">/Ω/</a></td>
                         </tr>
                         <tr>
-                            <td><a href="https://www.netflix.com" target="_blank" rel="noopener norefferer">netflix</a>
-                            </td>
-                            <td><a href="https://www.linked.in" target="_blank" rel="noopener norefferer">linkedin</a>
-                            </td>
-                            <td><a href="https://www.codewars.com" target="_blank"
-                                    rel="noopener norefferer">codewars</a></td>
-                            <td><a href="https://boards.4channel.org/tv/catalog" target="_blank"
-                                    rel="noopener norefferer">/tv/</a></td>
+                            <td><a href="https://www.netflix.com" target="_blank" rel="noopener norefferer">netflix</a></td>
+                            <td><a href="https://www.linked.in" target="_blank" rel="noopener norefferer">linkedin</a></td>
+                            <td><a href="https://www.codewars.com" target="_blank" rel="noopener norefferer">codewars</a></td>
+                            <td><a href="https://docs.google.com/spreadsheets/u/0/" target="_blank" rel="noopener norefferer">sheets</a></td>
+                            <td><a href="https://boards.4channel.org/tv/catalog" target="_blank" rel="noopener norefferer">/tv/</a></td>
+
+                        </tr>
+                        <tr>
+                            <td><a href="https://www.twitch.com" target="_blank" rel="noopener norefferer">twitch</a></td>
+                            <td><a href="https://www.facebook.com" target="_blank" rel="noopener norefferer">facebook</a></td>
+                            <td><a href="https://www.utest.com" target="_blank" rel="noopener norefferer">utest</a></td>
+                            <td><a href="https://login.adp.com/welcome" target="blank" rel="noopener norefferer">adp</a></td>
+                            <td><a href="https://boards.4channel.org/g/thread/88804194" target="_blank" rel="noopener norefferer">/wdg/</a></td>
                         </tr>
                     </table>
                 </div>
